fix: adjust z-index

--- a/src/app/shared/credit-card/credit-card.component.scss
+++ b/src/app/shared/credit-card/credit-card.component.scss
@@ -47,7 +47,7 @@ body {
   box-shadow: 1px 1px #aaa3a3;
   top: 0;
   position: absolute;
-  z-index: 1000;
+  z-index: 3;
   left: 0;
   display: inline-block;
   width: 320px;
